--- a/assets/lang/hi.json
+++ b/assets/lang/hi.json
@@ -1,6 +1,73 @@
 {
     "translation": {
-        "hello": "नमस्ते",
-        "this line is translated": "यह पंक्ति अनुवादित है"
+        "login": {
+            "title": "अपना फ़ोन नंबर दर्ज करें",
+            "title2": "हम आपको 6 अंकों का सत्यापन कोड भेजेंगे",
+            "mobile": "मोबाइल",
+            "btnText": "ओटीपी जनरेट करें",
+            "alertTitle1": "मोबाइल नंबर",
+            "alertTitle2": "कृपया सही मोबाइल नंबर दर्ज करें",
+            "alertTitle3": "ठीक है"
+        },
+        "otpVerify": {
+            "title": "ओटीपी सत्यापन",
+            "title2": "को भेजे गए ओटीपी को दर्ज करें +91 ",
+            "title3": "ओटीपी प्राप्त नहीं हुआ? ",
+            "resend": "फिर से भेजें",
+            "btnText": "सत्यापित करें और जारी रखें"
+        },
+        "onboarding": {
+            "next": "अगला",
+            "skip": "छोड़ें",
+            "get started": "प्रारंभ करें",
+            "swipedata": [
+                {
+                    "image": "1",
+                    "title": "दावा",
+                    "message": "कुछ ही टैप में AlFolio के साथ भागीदारी करके जारीकर्ता से अपने प्रमाणपत्र का दावा करें। यह 2+2 जैसा आसान है"
+                },
+                {
+                    "image": "2",
+                    "title": "भेजें",
+                    "message": "अपना प्रमाणपत्र किसी को भी भेजें और उन्हें इसे फिर से सत्यापित करने की आवश्यकता नहीं होगी. यह एल्गोरिद्म है प्रमेय नहीं."
+                },
+                {
+                    "image": "3",
+                    "title": "प्रमाणीकरण ",
+                    "message": "शुरू से अंत तक एन्क्रिप्शन और जीरो डेटा टेम्परिंग सुनिश्चित करता है। हैकिंग के प्रयास 5/0 होंगे"
+                }
+            ]
+        },
+        "pickAccount": {
+            "title": "एक खाता चुनें",
+            "use another account": "दूसरे खाते का उपयोग करें"
+        },
+        "home": {},
+        "drawer": {
+            "screen1": "होम",
+            "screen2": "प्रोफ़ाइल",
+            "screen3": "सूचना",
+            "screen4": "सेटिंग्स",
+            "signOut": "साइन आउट"
+        },
+        "showMarksheet": {
+            "school": "उच्चतर माध्यमिक प्रमाणपत्र",
+            "board": "एमपी बोर्ड",
+            "send": "भेजें",
+            "share": "हिस्सा बाँट",
+            "download": "डाउनलोड",
+            "send history log": "इतिहास लॉग देखे"
+        },
+        "sendDocuments": {
+            "enter the address": "पता दर्ज करें",
+            "duration": "अवधि",
+            "notify on email": "ईमेल पर सूचित करें",
+            "enable": "सक्षम करें",
+            "send": "भेजें",
+            "header name": "अपने दस्तावेज़ भेजें"
+        },
+        "sendHistory": {
+            "header name": "लॉग भेजें"
+        }
     }
 }
