--- a/assets/lang/english.json
+++ b/assets/lang/english.json
@@ -106,7 +106,7 @@
             "signOut": "Sign out",
             "switchAccount": "Switch Account",
             "addprofile": "Add a Profile",
-            "name": "Janak Patel",
+            "name": "Janak Kumer",
             "name1": "Kalika Prasad"
         },
         "showMarksheet": {
