--- a/assets/lang/english.json
+++ b/assets/lang/english.json
@@ -132,7 +132,7 @@
             "FirstName": "First Name",
             "MiddleName": "Middle Name",
             "LastName": "Last Name",
-            "parentGuardianSpouseName": "Parent/Guardian/SpouseName",
+            "parentGuardianSpouseName": "Parent/Guardian/Spouse Name",
             "Gender": "Gender",
             "Dob": "DOB",
             "City": "City",
